<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/toolbar_relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_gray"
        android:padding="@dimen/_15sdp">
 <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_menu_black_24dp"></ImageView>
        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="E-Commerce"
            android:textSize="@dimen/_20sdp"></TextView>

    </RelativeLayout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar_relative">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/light_gray"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">



                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_below="@id/app_name"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginBottom="20dp"
                    android:background="@color/white"
                    android:elevation="8dp"

                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:text="@string/search_here"></TextView>

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:src="@drawable/ic_round_search_24px"></ImageView>


                </RelativeLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_margin="@dimen/_3sdp"
                        app:cardCornerRadius="@dimen/_5sdp"
                        app:cardPreventCornerOverlap="true">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <ImageView
                                android:id="@+id/cat_icon1"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_centerHorizontal="true"
                                android:layout_centerVertical="true"
                                android:src="@drawable/deals"></ImageView>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/cat_icon1"
                                android:layout_centerHorizontal="true"
                                android:layout_centerVertical="true"
                                android:layout_margin="@dimen/_1sdp"
                                android:fontFamily="sans-serif-condensed-medium"
                                android:text="@string/deals"
                                android:textColor="@color/black"
                                android:textSize="8dp"></TextView>
                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_margin="@dimen/_3sdp"
                        app:cardCornerRadius="@dimen/_5sdp"
                        app:cardPreventCornerOverlap="true">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <ImageView
                                android:id="@+id/cat_icon2"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_centerHorizontal="true"
                                android:layout_centerVertical="true"
                                android:src="@drawable/mobile"></ImageView>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/cat_icon2"
                                android:layout_centerHorizontal="true"
                                android:layout_centerVertical="true"
                                android:layout_margin="@dimen/_1sdp"
                                android:fontFamily="sans-serif-condensed-medium"
                                android:text="@string/mobiles"
                                android:textColor="@color/black"
                                android:textSize="8dp"></TextView>
                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_margin="@dimen/_3sdp"
                        app:cardCornerRadius="@dimen/_5sdp"
                        app:cardPreventCornerOverlap="true">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <ImageView
                                android:id="@+id/cat_icon3"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_centerHorizontal="true"
                                android:layout_centerVertical="true"
                                android:layout_marginEnd="-6dp"
                                android:src="@drawable/sweater"></ImageView>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/cat_icon3"
                                android:layout_centerHorizontal="true"
                                android:layout_centerVertical="true"
                                android:layout_margin="@dimen/_1sdp"
                                android:fontFamily="sans-serif-condensed-medium"
                                android:text="@string/clouthes"
                                android:textColor="@color/black"
                                android:textSize="8dp"></TextView>
                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_margin="@dimen/_3sdp"
                        app:cardCornerRadius="@dimen/_5sdp"
                        app:cardPreventCornerOverlap="true">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <ImageView
                                android:id="@+id/cat_icon4"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_centerHorizontal="true"
                                android:layout_centerVertical="true"
                                android:src="@drawable/accessories"></ImageView>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/cat_icon4"
                                android:layout_centerHorizontal="true"
                                android:layout_centerVertical="true"
                                android:layout_margin="@dimen/_1sdp"
                                android:fontFamily="sans-serif-condensed-medium"
                                android:text="@string/accessories"
                                android:textColor="@color/black"
                                android:textSize="8dp"></TextView>
                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@color/white">

                <LinearLayout
                    android:id="@+id/feautrecc_background"
                    android:layout_width="170dp"
                    android:layout_height="280dp"
                    android:layout_margin="10dp"
                    android:background="@color/overlay_primary_dark"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:text="@string/all_featured_location"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="25sp"></TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:text="@string/all_featured_location_description"
                        android:textAllCaps="true"
                        android:textColor="@color/darker_gray"
                        android:textSize="12sp"></TextView>

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_toRightOf="@id/feautrecc_background"></androidx.recyclerview.widget.RecyclerView>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:text="@string/mostViewd_location"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="20sp"></TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:text="@string/view_all"
                        android:textAllCaps="true"
                        android:textColor="@color/darker_gray"
                        android:textSize="12sp"></TextView>
                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView_mostViewd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                </androidx.recyclerview.widget.RecyclerView>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:text="@string/categories"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="20sp"></TextView>
                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView_categories"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                </androidx.recyclerview.widget.RecyclerView>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>